<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearContainer"
        style="@style/HideSoftInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDigits"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/label_3_40"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etAmount"
            style="@style/EditTextStyle.NumberOnly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/label_amount"
            android:imeOptions="actionDone"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvLak"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:enabled="false"
            android:text="@string/label_lak"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/imvCancel"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible" />
    </LinearLayout>
</layout>