<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                style="@style/HideSoftInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imvAnimal1"
                            android:layout_width="@dimen/animal_lotto_view"
                            android:layout_height="@dimen/animal_lotto_view"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_border_stroke_black"
                            android:padding="4dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dog_paw" />

                        <TextView
                            android:id="@+id/tvAnimal1"
                            style="@style/TextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/label_name" />

                        <EditText
                            android:id="@+id/etAnimal1"
                            style="@style/EditTextStyle.NumberOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="00"
                            android:imeOptions="actionNext"
                            android:maxLength="2"
                            android:textSize="@dimen/edittext_lotto_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imvAnimal2"
                            android:layout_width="@dimen/animal_lotto_view"
                            android:layout_height="@dimen/animal_lotto_view"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_border_stroke_black"
                            android:padding="4dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dog_paw" />

                        <TextView
                            android:id="@+id/tvAnimal2"
                            style="@style/TextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/label_name" />

                        <EditText
                            android:id="@+id/etAnimal2"
                            style="@style/EditTextStyle.NumberOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="00"
                            android:imeOptions="actionNext"
                            android:maxLength="2"
                            android:textSize="@dimen/edittext_lotto_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imvAnimal3"
                            android:layout_width="@dimen/animal_lotto_view"
                            android:layout_height="@dimen/animal_lotto_view"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_border_stroke_black"
                            android:padding="4dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dog_paw" />

                        <TextView
                            android:id="@+id/tvAnimal3"
                            style="@style/TextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/label_name" />

                        <EditText
                            android:id="@+id/etAnimal3"
                            style="@style/EditTextStyle.NumberOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="00"
                            android:imeOptions="actionDone"
                            android:maxLength="2"
                            android:textSize="@dimen/edittext_lotto_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvRandom"
                            style="@style/TextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_random" />

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnOk"
                    style="@style/ButtonStyle.Transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/label_ok" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_3_40" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_amount" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvAmount"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:text="@string/label_amount" />

                    <TextView
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/label_lak" />
                </FrameLayout>

                <Button
                    android:id="@+id/btnPurchase"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingBottom="@dimen/padding_bottom_layout"
                    android:paddingTop="@dimen/padding_bottom_layout"
                    android:text="@string/label_purchase" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>
